[package]
name = "docker_mirrors"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.4"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.10"
config = "0.13"
futures = "0.3"
bytes = "1.4"
chrono = "0.4"
